# any-llm-poc

./: .env.example  CLAUDE.md  NOTES.md  README.md  app.py  chat.py  models_config.json  provider_discovery.py  pyproject.toml  requirements.txt  tools.py
docs/: proxy-api.json
examples/: 01_basic_comparison.py  02_streaming_comparison.py  03_tool_calling.py  04_capability_matrix.py
static/: app.js  dashboard.css  dashboard.html  dashboard.js  index.html  models-dashboard.js  site.webmanifest  style.css
