[project]
name = "any-llm-poc"
version = "0.1.0"
description = "A minimal CLI chat application demonstrating the any-llm library's capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["llm", "ai", "openai", "anthropic", "mistral", "chat", "cli"]

dependencies = [
    "any-llm-sdk[all]>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/mozilla-ai/any-llm"
Repository = "https://github.com/AlteredCraft/any-llm-poc"

[project.scripts]
any-llm-chat = "chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
